feat: Update project name and metadata
Updates the project's package name, HTML title, and metadata to reflect the new application name "CamWatch Pro - Lâm Viên". This improves branding and clarity for the security camera management system.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-phường-lâm-viên",
+  "name": "camwatch-pro---lâm-viên",
   "private": true,
   "version": "0.0.0",
   "type": "module",
