refactor: Update application name and description
Update the application name and descriptions across package.json, index.html, metadata.json, and App.tsx to reflect the new branding "Camera - Lâm Viên - Đà Lạt". This change improves clarity and consistency with the project's intended scope.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "camwatch-pro---lâm-viên",
+  "name": "camera---lâm-viên---đà-lạt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
